Temp remove WBE line in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,9 +26,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="logo"><a href="/"><img src="/assets/img/civil360-logo-dark-bg-small.png" alt="Civil 360 LLC"></a></div>
-        <p>Civil 360 LLC is a Women Business Enterprise (WBE)</p>
+         <p>Civil 360 LLC {%- comment -%}is a Women Business Enterprise (WBE){%- endcomment -%}</p> 
       </div>
-
     </div>
   </div>
 
