--- a/assets/scss/_sections.scss
+++ b/assets/scss/_sections.scss
@@ -1,50 +1,3 @@
-// Sections
-#consultation-small-dark {
-    background-color: $blue-base;
-    padding: 2rem 0;
-    color: $text-light;
-    
-    .container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        p {
-            margin: 0;
-            position: relative;
-            font-size: .875rem;
-            
-            &::before {
-                @include titleBefore($orange-base, .0625rem, .75rem);
-                bottom: -10%;
-                left: .5rem;
-                opacity: .3;
-            }
-        }
-        
-        .btn {
-            margin-left: 1.5rem;
-        }
-  
-        @include mq('md', $type: max) {
-            flex-direction: column;
-            text-align: center;
-            
-            p {
-                margin: 0 0 1.5rem 0;
-                
-                &::before {
-                    display: none;
-                }
-            }
-            
-            .btn {
-                margin: 0;
-            }
-        }
-    }
-}
-
 #services {
     padding: $section-padding;
     
@@ -127,64 +80,9 @@
     }
 }
 
-#stats {
-    background-color: $blue-base;
-    padding: $section-padding;
-    color: $text-light;
-    
-    &.light {
-        background-color: $gray-100;
-        color: $blue-base;
-    }
-    
-    .fa {
-        color: $orange-base;
-        font-size: 2rem;
-        margin-bottom: .625rem;
-    }
-    
-    p {
-        margin: 0;
-        
-        &:last-child {
-            font-weight: 300;
-            font-size: .75rem;
-    
-            @include mq('md', $type: max) {
-                margin-bottom: 1.5rem;
-            }
-        }
-    }
-}
-
-#world-map {
-    padding: $section-padding;
-    background-color: $orange-base;
-    color: $blue-base;
-    
-    img {
-        max-width: 100%;
-    }
-    
-    h4 {
-        font-size: 1.125rem;
-        font-weight: 600;
-    }
-    
-    p {
-        font-size: .75rem;
-        font-weight: 300;
-        margin: 1.125rem 0;
-    }
-    
-    .btn {
-        display: inline-block;
-    }
-}
-
 #about {
     padding: $section-padding;
-    background-image: url('/assets/img/about-bg-pattern.png');
+    //background-image: url('/assets/img/about-bg-pattern.png');
     text-align: center;
     
     .bottom-line {
@@ -225,455 +123,6 @@
         font-size: 1rem;
         max-width: 80%;
         margin: 0 auto 1rem auto;
-    }
-}
-
-#how-we-work {
-    background-image: url('/assets/img/image07.jpg');
-    background-position: center center;
-    background-size: cover;
-    padding: $section-padding-large;
-    position: relative;
-    color: $text-light;
- 
-    .title {
-        h3 {
-            font-size: 1.125rem;
-        }
-        
-        h2 {
-            font-size: 1.375rem;
-            
-            &::before {
-                display: none;
-            }
-        }
-    }
-    
-    .container {
-        position: relative;
-    }
-    
-    .content {
-        margin-top: 3rem;
-        
-        p {
-            font-size: .75rem;
-            font-weight: 300;
-        }
-        
-        h4 {
-            font-size: 1rem;
-            text-transform: uppercase;
-            font-weight: 600;
-            margin: 1rem 0;
-        }
-        
-        .fa {
-            font-size: 2rem;
-            color: $orange-base;
-        }
-    }
-    
-    &::before {
-        content: "";
-        background-color: $blue-base;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: .85;
-    }
-}
-
-#free-consultation-box {
-    background-color: $orange-base;
-    color: $text-light;
-    
-    .container {
-        display: flex;
-        
-        p {
-            align-self: center;
-            margin: 0;
-            flex: 1;
-        }
-        
-        a.consultation-read-more {
-            display: flex;
-            align-self: center;
-            padding: 2rem 1.5rem;
-            background-color: $blue-base;
-            text-decoration: none;
-            color: $text-light;
-            
-            @include transition(.5s ease all);
-            
-            &:hover {
-                background-color: $blue-hover;
-            }
-        }
-        
-        @include mq('md', $type: max) {
-            padding: $section-padding;
-            flex-direction: column;
-            text-align: center;
-            
-            a.consultation-read-more {
-                margin-top: 1rem;
-            }
-        }
-    }
-}
-
-#content-box-first {
-    background-image: url('/assets/img/image01.jpg');
-    background-size: cover;
-    background-position: center center;
-    position: relative;
-    
-    &::before {
-        content: "";
-        background-color: $blue-base;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: .55;
-    }
-    
-    .container {
-        position: relative;
-    }
-    
-    .boxes {
-        display: flex;
-        flex: 1;
-        color: $text-light;
-        
-        .box-image {
-            flex-basis: 50%;
-            overflow: hidden;
-            
-            .image {
-                background-size: cover;
-                background-position: center center;
-                width: 100%;
-                height: 100%;
-
-                @include transition(.5s ease all);
-
-                &:hover {
-                    transform: scale(2,2);
-                }
-            }
-        }
-        
-        .box-title {
-            background-color: $blue-hover;
-            padding: .7rem 2rem;
-            
-            h2 {
-                font-size: 1.25rem;
-                text-transform: uppercase;
-                margin: 0;
-            }
-            
-            p {
-                font-weight: 300;
-                font-size: .75rem;
-                margin: 0;
-            }
-        }
-        
-        .box-content {
-            flex-basis: 50%;
-            
-            .box {
-                background-color: $orange-base;
-                padding: 2rem;
-                display: flex;
-                
-                &.dark {
-                    background-color: $blue-base;
-                }
-                
-                .fa {
-                    font-size: 2rem;
-                    margin-right: 1rem;
-                }
-                
-                h4 {
-                    font-weight: 600;
-                    font-size: .875rem;
-                    text-transform: uppercase;
-                }
-                
-                p {
-                    font-size: .625rem;
-                    font-weight: 300;
-                }
-            }
-        }
-
-        @include mq('md', $type: max) {
-            flex-direction: column;
-        }
-    }
-}
-
-#about-company {
-    padding: $section-padding-large;
-    padding-bottom: 10rem;
-    
-    &.dark {
-        background-color: $blue-base;
-        color: $text-light;
-    }
-    
-    img {
-        max-width: 100%;
-    }
-    
-    .boxes {
-        display: flex;
-        
-        @include mq('md', $type: max) {
-            flex-direction: column;
-        }
-        
-        .box-content {
-            flex-basis: 50%;
-            
-            p {
-                font-size: .75rem;
-                font-weight: 300;
-            }
-            
-            img {
-                width: 20%;
-                margin-top: 1rem;
-                fill: #fff;
-            }
-            
-            .title {
-                display: inline-block;
-                position: relative;
-                
-                h4 {
-                    font-size: 7.5rem;
-                    position: relative;
-                    
-                    @include mq('md', $type: max) {
-                        margin-bottom: 6rem;
-                    }
-                    
-                    &::before {
-                        content: "";
-                        background-color: $orange-base;
-                        width: 4rem;
-                        height: .125rem;
-                        position: absolute;
-                        bottom: 0;
-                        left: 0;
-                        
-                        @include mq('md', $type: max) {
-                            bottom: -4.5rem;
-                        }
-                    }
-                }
-
-                span {
-                    font-size: 1.5rem;
-                    transform: rotate(-90deg);
-                    position: absolute;
-                    bottom: 3.5rem;
-                    right: -4.5rem;
-                    font-weight: 600;
-                    text-transform: uppercase;
-                    
-                    @include mq('md', $type: max) {
-                        bottom: 9rem;
-                    }
-                }
-                
-                p {
-                    position: absolute;
-                    right: -15.5rem;
-                    bottom: .5rem;
-                    font-size: .875rem;
-                    font-weight: 500;
-                    color: $orange-base;
-                    
-                    @include mq('md', $type: max) {
-                        right: 0;
-                        bottom: 1rem;
-                    }
-                }
-            }
-        }
-        
-        .box-images {
-            flex-basis: 50%;
-            position: relative;
-            padding-left: 6rem;
-            
-            img {
-                border: .25rem solid $orange-base;
-            }
-            
-            img:last-child {
-                position: absolute;
-                left: 1rem;
-                top: 3.5rem;
-                max-width: 100%;
-                width: 15rem;
-                
-                @include mq('md', $type: max) {
-                    width: 40%;
-                }
-            }
-        }
-    }
-}
-
-#team {
-    background-color: $orange-base;
-    padding: $section-padding;
-    
-    &.light {
-        background-color: $text-light;
-    }
-    
-    .members {
-        display: flex;
-        margin-left: -4rem;
-        
-        @include mq('md', $type: max) {
-            flex-wrap: wrap;
-            justify-content: center;
-            margin: 0;
-        }
-        
-        .member {
-            flex-basis: 25%;
-            background-color: $text-light;
-            margin-left: 4rem;
-            
-            @include boxShadow(0px 0px 4px 0px rgba(0,0,0,0.2));
-            
-            @include mq('md', $type: max) {
-                flex-basis: 50% !important;
-                margin: 0 0 2rem 0;
-            }
-            
-            @include mq('sm', $type: max) {
-                flex-basis: 100% !important;
-                margin: 0 0 2rem 0;
-            }
-            
-            .profile-image {
-                margin: 1rem 1rem 0 1rem;
-                overflow: hidden;
-                
-                img {
-                    width: 100%;
-                    @include transition(.5s ease all);
-                    
-                    &:hover {
-                        transform: scale(2,2);
-                    }
-                }
-            }
-            
-            .name {
-                background-color: $blue-base;
-                margin: 1rem 0;
-                padding: .25rem 1rem;
-                color: $text-light;
-                text-align: center;
-                border-left: 1.5rem solid $blue-base;
-                border-right: 1.5rem solid $blue-base;
-                margin-left: -1.5rem;
-                margin-right: -1.5rem;
-                position: relative;
-                box-sizing: inherit !important;
-                
-                @include mq('md', $type: max) {
-                    border: 0;
-                    margin: 1rem 0;
-                    
-                    &::before, &::after {
-                        display: none;
-                    }
-                }
-                
-                &::before {
-                    content: "";
-                    background-color: transparent;
-                    width: 0; 
-                    height: 0; 
-                    border-bottom: 1.5rem solid transparent;
-                    border-right: 1.5rem solid $blue-hover;
-                    position: absolute;
-                    bottom: -1.5rem;
-                    left: -1.5rem;
-                }
-                
-                &::after {
-                    content: "";
-                    background-color: transparent;
-                    width: 0; 
-                    height: 0; 
-                    border-bottom: 1.5rem solid transparent;
-                    border-left: 1.5rem solid $blue-hover;
-                    position: absolute;
-                    bottom: -1.5rem;
-                    right: -1.5rem;
-                }
-                
-                p {
-                    margin: 0;
-                    font-size: .875rem;
-                    font-weight: 600;
-                }
-                
-                span {
-                    color: $orange-base;
-                    font-size: .625rem;
-                }
-            }
-            
-            .content {
-                p {
-                    font-size: .75rem;
-                    font-weight: 300;
-                    padding: 0 1rem 1rem 1rem;
-                    margin: 0;
-                }
-            }
-            
-            .social-icons {
-                padding: 0 1rem 1rem 1rem;
-                text-align: center;
-                
-                .fa {
-                    margin: 0 .25rem;
-                }
-                
-                a {
-                    color: $blue-base;
-                    
-                    @include transition(.5s ease all);
-                    
-                    &:hover {
-                        color: $orange-base;
-                    }
-                }
-            }
-        } 
     }
 }
 
@@ -818,84 +267,6 @@
             padding: .5rem;
             text-align: center;
             margin-right: .5rem;
-        }
-    }
-}
-
-#latest-blog {
-    padding: $section-padding;
-    
-    .item {
-        @include boxShadow(0px 0px 4px 0px rgba(0,0,0,0.2));
-    }
-    
-    .image {
-        position: relative;
-        overflow: hidden;
-
-        img {
-            @include transition(.5s ease all);
-        }
-        
-        &:hover {
-            img {
-                transform: scale(2,2);
-            }
-        }
-        
-        &::after {
-            content: "";
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-            background-color: rgba($blue-base, .5);
-        }
-    }
-    
-    .content {
-        background-color: $gray-100;
-        padding: 1.5rem 1.5rem 0 1.5rem;
-        color: $blue-base;
-        
-        .btn {
-            margin-bottom: 1rem;
-        }
-        
-        a {
-            text-decoration: none;
-        }
-        
-        h4 {
-            color: $orange-base;
-            text-transform: uppercase;
-        }
-        
-        .date {
-            border-top: .0625rem solid rgba($blue-base, .1);
-            display: flex;
-            flex-wrap: wrap;
-            padding: .5rem 0 0 0;
-            
-            @include mq('md', $type: max) {
-                margin-bottom: 1.5rem;
-            }
-            
-            .fa {
-                margin-right: .15rem;
-            }
-            
-            p {
-                font-size: .625rem;
-            }
-            
-            p:last-child {
-                display: flex;
-                align-items: center;
-                justify-content: flex-end;
-                flex: 1;
-            }
         }
     }
 }
