--- a/assets/scss/_headers.scss
+++ b/assets/scss/_headers.scss
@@ -105,31 +105,8 @@
     }
 }
 
-#full-width-background {
-    background-image: url('/assets/img/image02.jpg');
-    background-position: center center;
-    background-size: cover;
-    min-height: 10rem;
-    position: relative;
-    
-    .container {
-        position: relative;
-    }
-    
-    &::before {
-        content: "";
-        background-color: $blue-base;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        opacity: .5;
-    }
-}
-
 #header-bg-image {
-    background-image: url('/assets/img/image09.jpg');
+    background-image: url('/assets/img/crane-bg.jpg');
     background-position: center center;
     background-size: cover;
     min-height: 10rem;
